--- a/aerospace/.config/aerospace/aerospace.toml
+++ b/aerospace/.config/aerospace/aerospace.toml
@@ -8,9 +8,10 @@ after-login-command = [
 
 ]
 after-startup-command = [
-
+  # JankyBorders has a built-in detection of already running process,
+  # so it won't be run twice on AeroSpace restart
+  'exec-and-forget /opt/homebrew/opt/borders/bin/borders active_color=0xffe1e3e4 inactive_color=0xff494d64 width=5.0'
 ]
-
 
 [mode.main.binding]
 # alt-enter = 'exec-and-forget open -n /System/Applications/Utilities/Terminal.app'
@@ -31,8 +32,8 @@ alt-v = 'split vertical'
 alt-f = 'fullscreen'
 
 alt-s = 'layout v_accordion' # 'layout stacking' in i3
-# alt-w = 'layout h_accordion' # 'layout tabbed' in i3
-# alt-e = 'layout tiles horizontal vertical' # 'layout toggle split' in i3
+alt-w = 'layout h_accordion' # 'layout tabbed' in i3
+alt-e = 'layout tiles horizontal vertical' # 'layout toggle split' in i3
 
 alt-shift-space = 'layout floating tiling' # 'floating toggle' in i3
 
@@ -66,31 +67,32 @@ alt-shift-space = 'layout floating tiling' # 'floating toggle' in i3
 # alt-shift-9 = 'move-node-to-workspace 9'
 # alt-shift-0 = 'move-node-to-workspace 10'
 
-alt-q = 'workspace 1'
-alt-w = 'workspace 2'
-alt-e = 'workspace 3'
-alt-r = 'workspace 4'
-alt-t = 'workspace 5'
-alt-y = 'workspace 6'
-alt-u = 'workspace 7'
-alt-i = 'workspace 8'
-alt-o = 'workspace 9'
-alt-p = 'workspace 10'
+alt-1 = 'workspace 1'
+alt-2 = 'workspace 2'
+alt-3 = 'workspace 3'
+alt-4 = 'workspace 4'
+alt-5 = 'workspace 5'
+alt-6 = 'workspace 6'
+alt-7 = 'workspace 7'
+alt-8 = 'workspace 8'
+alt-9 = 'workspace 9'
+alt-0 = 'workspace 10'
 
-alt-shift-q = 'move-node-to-workspace 1'
-alt-shift-w = 'move-node-to-workspace 2'
-alt-shift-e = 'move-node-to-workspace 3'
-alt-shift-r = 'move-node-to-workspace 4'
-alt-shift-t = 'move-node-to-workspace 5'
-alt-shift-y = 'move-node-to-workspace 6'
-alt-shift-u = 'move-node-to-workspace 7'
-alt-shift-i = 'move-node-to-workspace 8'
-alt-shift-o = 'move-node-to-workspace 9'
-alt-shift-p = 'move-node-to-workspace 10'
 
-# alt-shift-r = 'reload-config'
+alt-shift-1 = 'move-node-to-workspace 1'
+alt-shift-2 = 'move-node-to-workspace 2'
+alt-shift-3 = 'move-node-to-workspace 3'
+alt-shift-4 = 'move-node-to-workspace 4'
+alt-shift-5 = 'move-node-to-workspace 5'
+alt-shift-6 = 'move-node-to-workspace 6'
+alt-shift-7 = 'move-node-to-workspace 7'
+# alt-shift-8 = 'move-node-to-workspace 8'
+# alt-shift-9 = 'move-node-to-workspace 9'
+alt-shift-0 = 'move-node-to-workspace 10'
 
-# alt-r = 'mode resize'
+alt-shift-r = 'reload-config'
+
+alt-r = 'mode resize'
 
 [mode.resize.binding]
 h = 'resize width -50'
