--- a/.gitmodules
+++ b/.gitmodules
@@ -40,6 +40,9 @@
   path = zsh/.config/zsh/plugins/zsh-syntax-highlighting
   url = https://github.com/zsh-users/zsh-syntax-highlighting
 
+[submodule "zsh/.config/zsh/plugins/zsh-vi-mode"]
+  path = zsh/.config/zsh/plugins/zsh-vi-mode
+  url = https://github.com/jeffreytse/zsh-vi-mode
 
 
 
