--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -11,7 +11,12 @@ style = "Regular"
 [font]
 size = 20
 
-
+[window]
+padding.x = 10
+padding.y = 10
+opacity = 0.8
+blur = true
+decorations = "Buttonless"
 
 [env]
 TERM = "xterm-256color"
