--- a/aerospace/.config/aerospace/aerospace.toml
+++ b/aerospace/.config/aerospace/aerospace.toml
@@ -13,6 +13,36 @@ after-startup-command = [
   'exec-and-forget /opt/homebrew/opt/borders/bin/borders active_color=0xffe1e3e4 inactive_color=0xff494d64 width=5.0'
 ]
 
+[[on-window-detected]]
+if.app-id = 'com.google.Chrome'
+if.app-name-regex-substring = ''
+if.window-title-regex-substring = ''
+run = ['layout tiling', 'move-node-to-workspace 1']  # The callback itself
+
+[[on-window-detected]]
+if.app-id = 'com.jetbrains.intelliJ'
+if.app-name-regex-substring = ''
+if.window-title-regex-substring = ''
+run = ['layout tiling', 'move-node-to-workspace 2']  # The callback itself
+ 
+[[on-window-detected]]
+if.app-id = 'org.alacritty'
+if.app-name-regex-substring = ''
+if.window-title-regex-substring = ''
+run = ['layout tiling', 'move-node-to-workspace 3']  # The callback itself
+
+[[on-window-detected]]
+if.app-id = 'com.tinyspeck.slackmacgap'
+if.app-name-regex-substring = ''
+if.window-title-regex-substring = ''
+run = ['layout tiling', 'move-node-to-workspace 4']  # The callback itself
+
+[[on-window-detected]]
+if.app-id = 'com.microsoft.Outlook'
+if.app-name-regex-substring = ''
+if.window-title-regex-substring = ''
+run = ['layout tiling', 'move-node-to-workspace 4']  # The callback itself
+
 [mode.main.binding]
 # alt-enter = 'exec-and-forget open -n /System/Applications/Utilities/Terminal.app'
 
@@ -45,27 +75,7 @@ alt-shift-space = 'layout floating tiling' # 'floating toggle' in i3
 # should be supported at all https://github.com/nikitabobko/AeroSpace/issues/5
 # alt-a = 'focus parent'
 
-# alt-1 = 'workspace 1'
-# alt-2 = 'workspace 2'
-# alt-3 = 'workspace 3'
-# alt-4 = 'workspace 4'
-# alt-5 = 'workspace 5'
-# alt-6 = 'workspace 6'
-# alt-7 = 'workspace 7'
-# alt-8 = 'workspace 8'
-# alt-9 = 'workspace 9'
-# alt-0 = 'workspace 10'
 
-# alt-shift-1 = 'move-node-to-workspace 1'
-# alt-shift-2 = 'move-node-to-workspace 2'
-# alt-shift-3 = 'move-node-to-workspace 3'
-# alt-shift-4 = 'move-node-to-workspace 4'
-# alt-shift-5 = 'move-node-to-workspace 5'
-# alt-shift-6 = 'move-node-to-workspace 6'
-# alt-shift-7 = 'move-node-to-workspace 7'
-# alt-shift-8 = 'move-node-to-workspace 8'
-# alt-shift-9 = 'move-node-to-workspace 9'
-# alt-shift-0 = 'move-node-to-workspace 10'
 
 alt-1 = 'workspace 1'
 alt-2 = 'workspace 2'
