--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -4,12 +4,26 @@ import = [
 
 live_config_reload = true
 
+
+
+[font]
+size = 20
+
 [font.normal]
 family = "JetBrainsMono Nerd Font"
 style = "Regular"
 
-[font]
-size = 20
+[font.bold]
+family = "JetBrainsMono Nerd Font"
+style = "Bold"
+
+[font.bold_italic]
+family = "JetBrainsMono Nerd Font"
+style = "Bold Italic"
+
+[font.italic]
+family = "JetBrainsMono Nerd Font"
+style = "Italic"
 
 [window]
 padding.x = 10
