--- a/aerospace/.config/aerospace/aerospace.toml
+++ b/aerospace/.config/aerospace/aerospace.toml
@@ -55,6 +55,12 @@ if.app-id = 'com.spotify.client'
 # if.window-title-regex-substring = ''
 run = ['layout tiling', 'move-node-to-workspace 6']  # The callback itself
 
+[[on-window-detected]]
+# if.app-id = 'com.microsoft.teams'
+if.app-name-regex-substring = 'teams'
+# if.window-title-regex-substring = ''
+run = ['layout tiling', 'move-node-to-workspace 6']  # The callback itself
+
 [mode.main.binding]
 # alt-enter = 'exec-and-forget open -n /System/Applications/Utilities/Terminal.app'
 
