legger til vim keybind for quickdoc

--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -71,9 +71,12 @@ nmap g, :action VcsShowPrevChangeMarker<CR>
 nnoremap gD :action GotoTypeDeclaration<CR>
 nnoremap <leader>enter:action ImportModule<CR>
 
+nnoremap <S-k> :action QuickJavaDoc<CR>
+"nnoremap <> :action ShowErrorDescroption<CR>
+
 " next/prev tab
-nnoremap <C-l> :tabn'x<CR>
-nnoremap <C-h> :tabp'x<CR>
+nnoremap <S-l> :tabn'x<CR>
+nnoremap <S-h> :tabp'x<CR>
 map <leader>s :vsp<CR>
 
 " set sneak
