--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,7 +1,5 @@
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
-set-option -g  default-terminal "xterm-256color" 
-set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 set -g prefix C-space
 set -g escape-time 20
@@ -23,7 +21,8 @@ bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux'
+set -g @plugin '2kabhishek/tmux2k'
+# set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
@@ -32,10 +31,15 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 # set -g @plugin 'omerxx/tmux-sessionx'
 
-set -g @catppuccin_flavour 'frappe'
-set -g default-terminal 'screen-256color'
+# set -g @catppuccin_flavour 'frappe'
+set -g @tmux2k-theme 'onedark'
+set -g default-terminal 'tmux-256color'
 set-option -sa terminal-features ',XXX:RGB'
-set-option -sa terminal-overrides "xterm-256color"
+set-option -sa terminal-overrides "terminal-256color"
+set-option -g  default-terminal "xterm-256color" 
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -ga terminal-overrides ",*256col*:Tc"
+
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 
