--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -37,7 +37,7 @@ set -g default-terminal 'tmux-256color'
 set-option -sa terminal-features ',XXX:RGB'
 set-option -sa terminal-overrides "terminal-256color"
 set-option -g  default-terminal "xterm-256color" 
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -ga terminal-overrides ",tmux-256color:Tc"
 set-option -ga terminal-overrides ",*256col*:Tc"
 
 set -g @resurrect-capture-pane-contents 'on'
