--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -22,7 +22,6 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin '2kabhishek/tmux2k'
-# set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
@@ -31,8 +30,8 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 # set -g @plugin 'omerxx/tmux-sessionx'
 
-# set -g @catppuccin_flavour 'frappe'
 set -g @tmux2k-theme 'onedark'
+set -g @tmux2k-icons-only true
 set -g default-terminal 'tmux-256color'
 set-option -sa terminal-features ',XXX:RGB'
 set-option -sa terminal-overrides "terminal-256color"
