--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -62,6 +62,7 @@ nnoremap <leader>h :action HideActiveWindow<CR>
 nnoremap <leader>p :action PinActiveEditorTab<CR>
 nnoremap <leader>r :action Vcs.RollbackChangedLines<CR>
 nnoremap <leader>fg :action FindInPath<CR>
+nnoremap <leader>rg :action GoToClass<CR>
 nnoremap <leader>o :action GotoFile<CR>
 nnoremap <D-S-t> :action ReopenClosedTab<CR>
 nnoremap <C-j> :action EditorScrollLeft<CR>
@@ -69,10 +70,11 @@ nnoremap <C-k> :action EditorScrollRight<CR>
 nmap g; :action VcsShowNextChangeMarker<CR>
 nmap g, :action VcsShowPrevChangeMarker<CR>
 nnoremap gD :action GotoTypeDeclaration<CR>
-nnoremap <leader>enter:action ImportModule<CR>
+nnoremap <leader>enter :action ImportModule<CR>
+nnoremap <leader>rf :action RenameElement<CR>
 
 nnoremap <S-k> :action QuickJavaDoc<CR>
-"nnoremap <> :action ShowErrorDescroption<CR>
+"nnoremap <S-j> :action ShowErrorDescription<CR>
 
 " next/prev tab
 nnoremap <S-l> :tabn'x<CR>
@@ -93,22 +95,12 @@ Plug 'tommcdo/vim-exchange'
 Plug 'vim-scripts/argtextobj.vim'
 Plug 'machakann/vim-highlightedyank'
 Plug 'houl/repmo-vim'
+
 "noremap <expr> h repmo#SelfKey('h', 'l')|sunmap h
 "noremap <expr> l repmo#SelfKey('l', 'h')|sunmap l
 " repeat the last [count]motion:
 :map <expr> <Space> repmo#LastKey('')|sunmap <Space>
 :map <expr> <BS>    repmo#LastRevKey('')|sunmap <BS>
-
-" Define a custom text object for Kotlin functions
-function! KotlinFunctionTextObject(type)
-  if a:type == 'v'
-    normal! V
-  elseif a:type == 'o'
-    normal! v
-  endif
-  execute "normal! ?fun\<CR>f{"
-  normal! vi{
-endfunction
 
 " Map the custom text object to `af` (a function)
 xnoremap af :<C-u>call KotlinFunctionTextObject('v')<CR>
