--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -32,6 +32,10 @@ set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 
 set -g @tmux2k-theme 'onedark'
 set -g @tmux2k-icons-only true
+set -g status-left "#(bash ./plugins/tmux2k/scripts/kubectl.sh)"
+set -g status-interval 5
+set -g status-left "#(/bin/bash ./plugins/tmux-kubecontext/tmux-kubecontext.tmux)"
+set -g @tmux2k-refresh-rate 10
 set -g default-terminal 'tmux-256color'
 set-option -sa terminal-features ',XXX:RGB'
 set-option -sa terminal-overrides "terminal-256color"
