--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -62,6 +62,7 @@ nnoremap <leader>h :action HideActiveWindow<CR>
 nnoremap <leader>p :action PinActiveEditorTab<CR>
 nnoremap <leader>r :action Vcs.RollbackChangedLines<CR>
 nnoremap <leader>fg :action FindInPath<CR>
+nnoremap <leader>ff :action GotoFile<CR>
 nnoremap <leader>rg :action GoToClass<CR>
 nnoremap <leader>o :action GotoFile<CR>
 nnoremap <D-S-t> :action ReopenClosedTab<CR>
