--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -21,20 +21,17 @@ bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin '2kabhishek/tmux2k'
+# set -g @plugin '2kabhishek/tmux2k'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
-# set -g @plugin 'omerxx/tmux-sessionx'
 
 set -g @tmux2k-theme 'onedark'
 set -g @tmux2k-icons-only true
-set -g status-left "#(bash ./plugins/tmux2k/scripts/kubectl.sh)"
 set -g status-interval 5
-set -g status-left "#(/bin/bash ./plugins/tmux-kubecontext/tmux-kubecontext.tmux)"
 set -g @tmux2k-refresh-rate 10
 set -g default-terminal 'tmux-256color'
 set-option -sa terminal-features ',XXX:RGB'
@@ -73,8 +70,6 @@ bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 bind-key -T copy-mode-vi 'C-Space' select-pane -t:.+
-
-
 
 run '~/.config/tmux/plugins/tpm/tpm'
 
