--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,8 +1,8 @@
-import = [
+general.import = [
  "~/dotfiles/alacritty/.config/alacritty/base16-alacritty/colors/base16-default-dark-256"
 ]
 
-live_config_reload = true
+general.live_config_reload = true
 
 [mouse]
 
