--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -43,6 +43,9 @@ set-option -ga terminal-overrides ",*256col*:Tc"
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 
+bind-key -r f run-shell "tmux neww ~/dotfiles/tmux/.config/tmux/scripts/tmux-sessionizer"
+bind-key w run-shell '~/dotfiles/tmux/.config/tmux/scripts/tmux-windowizer'
+
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 
