--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,6 +1,9 @@
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
+unbind -
+bind - switch-client -l
+
 set -g prefix C-space
 set -g escape-time 20
 set -g mouse on
