legger til keybind prefix + o og i for previous og next session

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -4,6 +4,12 @@ bind r source-file ~/.config/tmux/tmux.conf
 unbind -
 bind - switch-client -l
 
+unbind o 
+bind o switch-client -p
+
+unbind i
+bind i switch-client -n
+
 set -g prefix C-space
 set -g escape-time 20
 set -g mouse on
