--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,6 +1,10 @@
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
+bind-key y run-shell "tmux new-window 'yazi .'"
+bind-key Y run-shell "tmux new-window 'yazi ~'"
+
+# session binds
 unbind -
 bind - switch-client -l
 
