aerospace config update

--- a/aerospace/.config/aerospace/aerospace.toml
+++ b/aerospace/.config/aerospace/aerospace.toml
@@ -50,16 +50,10 @@ if.app-id = 'com.microsoft.Outlook'
 run = ['layout tiling', 'move-node-to-workspace 4']  # The callback itself
 
 [[on-window-detected]]
-if.app-id = 'com.microsoft.Outlook'
-# if.app-name-regex-substring = ''
-# if.window-title-regex-substring = ''
-run = ['layout tiling', 'move-node-to-workspace 4']  # The callback itself
-
-[[on-window-detected]]
 if.app-id = 'com.spotify.client'
 # if.app-name-regex-substring = ''
 # if.window-title-regex-substring = ''
-run = ['layout tiling', 'move-node-to-workspace 6']  # The callback itself
+run = ['layout floating', 'move-node-to-workspace 6']  # The callback itself
 
 [[on-window-detected]]
 # if.app-id = 'com.microsoft.teams'
