--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,7 +1,7 @@
 font-family = "JetBrainsMono Nerd Font Mono"
-font-size = 20
+font-size = 24
 background = 121417 
 background-blur-radius = 20
-background-opacity = 0.90
-macos-titlebar-style = hidden
+background-opacity = 0.95
+macos-titlebar-style = native
 window-padding-x = 0
