tmux noconfirm close pane

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -4,6 +4,9 @@ bind r source-file ~/.config/tmux/tmux.conf
 bind-key y run-shell "tmux new-window 'yazi .'"
 bind-key Y run-shell "tmux new-window 'yazi ~'"
 
+unbind x
+bind x kill-pane
+
 # session binds
 unbind -
 bind - switch-client -l
