--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,8 +1,8 @@
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
-bind-key y run-shell "tmux new-window 'yazi .'"
-bind-key Y run-shell "tmux new-window 'yazi ~'"
+# bind-key y run-shell "tmux new-window 'yazi .'"
+# bind-key Y run-shell "tmux new-window 'yazi ~'"
 
 unbind x
 bind x kill-pane
@@ -30,6 +30,7 @@ bind-key l select-pane -R
 set -g status-position top 
 set -g base-index 1
 set -g renumber-windows on
+set -g pane-border-lines simple
 
 set-window-option -g mode-keys vi
 bind k copy-mode
@@ -57,11 +58,15 @@ set-option -g  default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",tmux-256color:Tc"
 set-option -ga terminal-overrides ",*256col*:Tc"
 
+# set -g default-terminal '${TERM}'
+# set -sg terminal-overrides ",*:RGB"
+
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 
-bind-key -r f run-shell "tmux neww ~/dotfiles/tmux/.config/tmux/scripts/tmux-sessionizer"
-bind-key w run-shell '~/dotfiles/tmux/.config/tmux/scripts/tmux-windowizer'
+# bind f new-window -n sessionizer "bash ~/dotfiles/tmux/.config/tmux/scripts/tmux-sessionizer"
+bind-key -r f new-window -n sessionizer "bash ~/dotfiles/tmux/.config/tmux/scripts/tmux-sessionizer"
+bind-key w run-shell "~/dotfiles/tmux/.config/tmux/scripts/tmux-windowizer"
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
