--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -44,10 +44,14 @@ nnoremap <C-d> <C-d>zz
 nnoremap <C-u> <C-u>zz
 nnoremap <C-f> <C-f>zz
 nnoremap <C-b> <C-b>zz
+nnoremap <C-s> :action ManageRecentProjects<CR>
 nnoremap * *zz
 nnoremap # #zz
 nnoremap <SPACE> <Nop>
 let mapleader = " "
+
+nnoremap <leader>dd :action ActivateDebugToolWindow<CR>
+nnoremap <leader>rr :action ActivateRunToolWindow<CR>
 nnoremap <leader>t :action ActivateTerminalToolWindow<CR>
 nnoremap <leader>d :action ToggleDistractionFreeMode<CR>
 nnoremap <leader>f :action ResizeToolWindowDown<CR>
