--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -38,6 +38,12 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
+bind-key -T copy-mode-vi Y send-keys -X selectline \; send-keys -X copy-pipe-and-cancel 'wl-copy'
+
+bind-key y capture-pane -p | tail -1 | wl-copy
+
+bind-key -T copy-mode-vi W send-keys -X select-word \; send-keys -X copy-pipe-and-cancel 'wl-copy'
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin '2kabhishek/tmux2k'
 set -g @plugin 'tmux-plugins/tmux-sensible'
