--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -35,10 +35,11 @@ set -g pane-border-lines simple
 set-window-option -g mode-keys vi
 bind k copy-mode
 bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi V send-keys -X select-line
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
-bind-key -T copy-mode-vi Y send-keys -X selectline \; send-keys -X copy-pipe-and-cancel 'wl-copy'
+bind-key -T copy-mode-vi Y send-keys -X select-line \; send-keys -X copy-pipe-and-cancel 'wl-copy'
 
 bind-key y capture-pane -p | tail -1 | wl-copy
 
