--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -25,7 +25,7 @@ set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term foot
+set $term alacritty
 # Your preferred application launcher
 set $menu wmenu-run
 
@@ -55,15 +55,16 @@ output * bg "/usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png" fill
 # resumed. It will also lock your screen before your computer goes to sleep.
 
 ### Input configuration
-#
-# Example configuration:
-#
-#   input type:touchpad {
-#       dwt enabled
-#       tap enabled
-#       natural_scroll enabled
-#       middle_emulation enabled
-#   }
+input type:touchpad {
+  dwt enabled
+    tap enabled
+    natural_scroll enabled
+    middle_emulation enabled
+    scroll_method two_finger
+    accel_profile adaptive
+    pointer_accel 0.5
+    scroll_factor 1.0
+}
 
 input type:keyboard {
 	xkb_layout "no"
