--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -41,7 +41,7 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 bind-key -T copy-mode-vi Y send-keys -X select-line \; send-keys -X copy-pipe-and-cancel 'wl-copy'
 
-bind-key y capture-pane -p | tail -1 | wl-copy
+bind-key y run-shell "tmux capture-pane -p | tail -1 | wl-copy"
 
 bind-key -T copy-mode-vi W send-keys -X select-word \; send-keys -X copy-pipe-and-cancel 'wl-copy'
 
