tmux copy mode improvement

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -34,6 +34,7 @@ set -g pane-border-lines simple
 
 set-window-option -g mode-keys vi
 bind k copy-mode
+bind C-u copy-mode \; send-keys -X halfpage-up
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi V send-keys -X select-line
 bind-key -T copy-mode-vi C-v send-keys -X begin-selection \; send-keys -X rectangle-toggle
