--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -32,6 +32,8 @@ set visualbell
 set noerrorbell
 set number
 set relativenumber
+set ignorecase
+set smartcase
 set clipboard = unnamedplus
 set clipboard += ideaput
 set quickscope
