popup window for tmux sessionizer

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -68,8 +68,7 @@ set-option -ga terminal-overrides ",*256col*:Tc"
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 
-# bind f new-window -n sessionizer "bash ~/dotfiles/tmux/.config/tmux/scripts/tmux-sessionizer"
-bind-key -r f new-window -n sessionizer "bash ~/dotfiles/tmux/.config/tmux/scripts/tmux-sessionizer"
+bind-key -r f display-popup -E -w 80% -h 80% "bash ~/dotfiles/tmux/.config/tmux/scripts/tmux-sessionizer"
 bind-key w run-shell "~/dotfiles/tmux/.config/tmux/scripts/tmux-windowizer"
 
 # Smart pane switching with awareness of Vim splits.
