--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -103,36 +103,6 @@ if "test ! -d ~/.config/tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm && ~/.config/tmux/plugins/tpm/bin/install_plugins'"
 run '~/.config/tmux/plugins/tpm/tpm'
 
-# Minimal Darcula Theme (matching darculasolid.nvim)
-# Theme is defined here after tpm to prevent plugins from overriding settings
-# For modular structure, see: theme/darcula.tmux (can be sourced after stow)
-# Colors: bg=#2B2B2B, fg=#A9B7C6, blue=#6897BB, orange=#CC7832, green=#6A8759, gray=#808080/#555555
-
-# Status bar with transparent background
-set-option -g status-style "fg=#A9B7C6,bg=default"
-
-# Window status
-set-option -g window-status-format " #I:#W "
-set-option -g window-status-current-format " #I:#W "
-set-option -g window-status-style "fg=#808080,bg=default"
-set-option -g window-status-current-style "fg=#6897BB,bg=default,bold"
-set-option -g window-status-separator ""
-
-# Status bar content - kubectl + prefix indicator on left, load + hostname on right
-# Script path: After 'stow */', this will resolve to the correct location
-set-option -g status-left "#[fg=#6897BB]#(bash -c '[ -x ~/.config/tmux/scripts/kubectl-context.sh ] && ~/.config/tmux/scripts/kubectl-context.sh 2>/dev/null') #[fg=#FFC66D]#{?client_prefix,⌨ ,}"
-set-option -g status-right "#[fg=#6A8759]#(cat /proc/loadavg 2>/dev/null | cut -d' ' -f1 || uptime | awk '{print $(NF-2)}' | tr -d ',') #[fg=#808080]| #[fg=#CC7832]#H "
-set-option -g status-left-length 100
-set-option -g status-right-length 50
-
-# Pane borders
-set-option -g pane-border-style "fg=#555555"
-set-option -g pane-active-border-style "fg=#6897BB"
-
-# Message style
-set-option -g message-style "fg=#2B2B2B,bg=#6897BB"
-set-option -g message-command-style "fg=#2B2B2B,bg=#CC7832"
-
-# Mode style (copy mode, etc.)
-set-option -g mode-style "fg=#2B2B2B,bg=#6897BB"
+# Load theme (defined after tpm to prevent plugins from overriding)
+source-file ~/.config/tmux/theme/darcula.tmux
 
